[tool.poetry]
name = "crewai-mcp-neo4j-fastapi"
version = "0.1.0"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.13"
uvicorn = "^0.34.3"
crewai = "^0.121.1"
crewai-tools = {extras = ["mcp"], version = "^0.46.0"}
pydantic = "^2.11.5"
fastapi = "^0.115.12"
langfuse = "^2.0.0"
langchain-openai = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
